add sandwich in panier

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:6969/miche_db
     username: postgres
-    password: admin
+    password: 1234
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
